<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <ImageButton
                android:id="@+id/title_btn_left"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="0dp"
                android:background="#00000000"
                android:src="@drawable/btn_x" />

            <TextView
                android:id="@+id/title_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/link_config_title"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.6"
            android:visibility="visible">

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <ListView
                android:id="@+id/ssidlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="60dp"></ListView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/link_config_ssid"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ssidEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/config_wifi_edittext_bk"
                    android:ems="10"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/sleeptimeshow"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/link_config_password"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/config_wifi_edittext_bk"
                    android:ems="10"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/configbtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_frame"
                android:text="@string/config_link"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
